# berkeleydb

./: .gitignore  CMakeLists.txt  berkeleydb_141_17134.patch  berkeleydb_141_17763.patch
build_windows/: BDB_dotNet_examples_vs2015.sln  BDB_dotNet_vs2015.sln  Berkeley_DB_examples_vs2010.sln  Berkeley_DB_examples_vs2012.sln  Berkeley_DB_examples_vs2015.sln  Berkeley_DB_vs2010.sln  Berkeley_DB_vs2012.sln  Berkeley_DB_vs2015.sln
build_windows/VS10/: application.props
build_windows/VS12/: library.props
docs/: index.html
docs/csharp/: Index.html  WebKI.xml  WebTOC.xml
docs/csharp/html/: AllMembers_T_BerkeleyDB_AckPolicy.htm  AllMembers_T_BerkeleyDB_ActiveTransaction.htm  AllMembers_T_BerkeleyDB_BTreeCursor.htm  AllMembers_T_BerkeleyDB_BTreeDatabase.htm  AllMembers_T_BerkeleyDB_BTreeDatabaseConfig.htm  AllMembers_T_BerkeleyDB_BTreeStats.htm  AllMembers_T_BerkeleyDB_BackupOptions.htm  AllMembers_T_BerkeleyDB_BadSecondaryException.htm  AllMembers_T_BerkeleyDB_BaseCursor.htm  AllMembers_T_BerkeleyDB_BaseDatabase.htm  AllMembers_T_BerkeleyDB_ByteOrder.htm  AllMembers_T_BerkeleyDB_CacheInfo.htm  AllMembers_T_BerkeleyDB_CachePriority.htm  AllMembers_T_BerkeleyDB_CompactConfig.htm  AllMembers_T_BerkeleyDB_CompactData.htm  AllMembers_T_BerkeleyDB_Cursor.htm  AllMembers_T_BerkeleyDB_CursorConfig.htm  AllMembers_T_BerkeleyDB_Database.htm  AllMembers_T_BerkeleyDB_DatabaseConfig.htm  AllMembers_T_BerkeleyDB_DatabaseEntry.htm  AllMembers_T_BerkeleyDB_DatabaseEnvironment.htm  AllMembers_T_BerkeleyDB_DatabaseEnvironmentConfig.htm  AllMembers_T_BerkeleyDB_DatabaseException.htm  AllMembers_T_BerkeleyDB_DatabaseStream.htm  AllMembers_T_BerkeleyDB_DatabaseStreamConfig.htm  AllMembers_T_BerkeleyDB_DatabaseType.htm  AllMembers_T_BerkeleyDB_DbChannel.htm  AllMembers_T_BerkeleyDB_DbSite.htm  AllMembers_T_BerkeleyDB_DbSiteConfig.htm  AllMembers_T_BerkeleyDB_DbThreadID.htm  AllMembers_T_BerkeleyDB_DeadlockException.htm  AllMembers_T_BerkeleyDB_DeadlockPolicy.htm  AllMembers_T_BerkeleyDB_ErrorCodes.htm  AllMembers_T_BerkeleyDB_ForeignConflictException.htm  AllMembers_T_BerkeleyDB_FullLogBufferException.htm  AllMembers_T_BerkeleyDB_HashCursor.htm  AllMembers_T_BerkeleyDB_HashDatabase.htm  AllMembers_T_BerkeleyDB_HashDatabaseConfig.htm  AllMembers_T_BerkeleyDB_HashStats.htm  AllMembers_T_BerkeleyDB_HeapDatabase.htm  (+2433 more)
examples/c/ex_servicemgmt/: servicemgmt_setup.c
examples/csharp/excs_getting_started/Properties/: AssemblyInfo.cs
examples/java/parking_demo/src/com/sleepycat/sample/: ParkingDemo.java
examples/java/parking_demo/src/com/sleepycat/sample/data/: Ticket.java  TicketLog.java
examples/java/parking_demo/src/com/sleepycat/sample/dbinterface/: DPLDbManager.java  DPLTicketDAO.java  DbManager.java  EnvDbManager.java  TicketDAO.java
examples/java/parking_demo/src/com/sleepycat/sample/park/: Meter.java
lang/csharp/doc/: CsharpDoc.shfbproj
lang/csharp/src/: BaseCursor.cs
lang/java/src/com/sleepycat/asm/: Context.java  CurrentFrame.java  TypePath.java
lang/php_db4/: config.w32
lang/thrift/client/java/com/sleepycat/client/asm/: Context.java  TypePath.java
util/db_gui/: EnableRunnable.java
